- Added freopen(), tmpfile(), mktemp(), and some other stdio functions
- Added some missing math functions
- Correctly handled casts to void in nucode output
- Fixed some problems with sizeof() used to declare local variables
- Fixed incorrect multiple casting of union initialization
- Fixed incorrect evaluation of unsigned constant expressions
- Several improvements to C locale() related functions

Version 6.2.3
- Added strpbrk(), strcoll(), strspn() functions for the C library
- Fixed a potential crash in Spin2 parsing of @func()
- Fixed taking the difference of a pointer and generic value

Version 6.2.2
- Fixed some 64 bit constant issues with DIR/OUT/IN manipulation
- Make sure garbage collector does not reclaim BASIC I/O wrapper
- Reverted waitatn() change from 6.2.0

Version 6.2.1
- Added a check for i <= 0 in mid$(a, i, j)
- Fixed a bug in calculating fcache size
- Fixed @x-@y expressions in P1 bytecode DAT section
- Fixed some array offset calculations in P1 bytecode (thanks Ada)
- Fixed object arrays in P1 bytecode (thanks again to Ada)
- Fixed returning classes from functions, at least for some common cases

Version 6.2.0
- Changed waitatn() to use a pollatn() loop like the Spin2 interpreter does
- Extended littlefs code to allow multiple instances
- Fixed offset computation when structs have 8 byte subfields
- Fixed a bug in alignment of 64 bit integers
- Implemented new method pointer code for PASM backends that does not require memory allocation.
- Implemented interfaces in BASIC
- Optimized some 64 bit operations on constants (thanks to Ada)
- Various other assembly optimizations, again due to Ada

Version 6.1.8
- Changed maximum number of entries in multiple assignments from 8 to 16
- Fixed multiple uses of LET in BASIC programs
- Made sure class types are resolved when they are used as function returns
- Made UTF-8 the default encoding for FatFS (configurable via FF_LFN_UNICODE)

Version 6.1.7